# napari-workshops

./: .gitignore  CONTRIBUTING.md  README.md  myst.yml  pyproject.toml
.github/workflows/: pages.yml
00-instructors/: 00_organizers.md  01_instructors.md
01-intro-napari/: 00_setup.md  index.md
02-extend-napari/: 05_custom_colormaps.md
docs/: home.md  myst.yml
docs/00-instructors/: 00_organizers.md  instructors.md
docs/01-intro-napari/: block1_welcome.md  block2_gui.md  block3_plugins_and_annotation.md  block4_analysis_wrap_up.md  index.md  session_schedule.md  setup.md
docs/_scripts/: copy_theme_css.py
docs/archive/: 02_intro_bioimage_viz.md
shared/: installation.md  notebook_setup.md
